[project]
name = "aes67-nmos-wrapper"
version = "0.1.0"
description = "NMOS IS-04/IS-05 wrapper for aes67-linux-daemon receivers"
readme = "README.md"
authors = [{ name = "Nicolas" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "zeroconf>=0.130",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
